# continuous-learning-and-teaching

./: CLAUDE.md  LICENSE  README.md  continuous-learning-and-teaching.code-workspace  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: commitlint.yml  coopera-linting.yml  coopera-test.yml  coopera.yml  global-lint.yml  linting.yml  mini-marketplace.yml  technical-acessments.yml  technical-assessments-mini-marketplace-tests.yml  technical-assessments.yml  tests.yml
.husky/: pre-commit
coopera/: .env.development  .gitignore  README.md  eslint.config.mjs  package-lock.json  package.json
coopera/.github/workflows/: linting.yml  tests.yaml  tests.yml
coopera/infra/: database.js  docker-compose.yml
coopera/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
coopera/src/app/components/: ThemeProvider.tsx  (+2 more)
coopera/src/tests/: boilerlplate.test.js
python-selenium-linkedin-automation/: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
python-selenium-linkedin-automation/src/linkedin_automation/: cli.py
python-selenium-linkedin-automation/src/linkedin_automation/clients/: linkedin.py
python-selenium-linkedin-automation/src/linkedin_automation/config/: settings.py
python-selenium-linkedin-automation/src/linkedin_automation/core/: browser.py
python-selenium-linkedin-automation/src/linkedin_automation/utils/: logger.py
python-selenium-linkedin-automation/tests/: test_smoke.py
superdoc-nextjs-playground/: README.md  package-lock.json  package.json
superdoc-nextjs-playground/app/: layout.tsx  page.tsx
superdoc-nextjs-playground/components/: DocumentEditor.jsx  SecureEditor.jsx
superdoc-nextjs-playground/public/: cvGustavoAlmeida.docx
technical-acessments/fullstack-mini-marketplace/: .env.example  docker-compose.dev.yml  docker-compose.yml
technical-assessments/fullstack-mini-marketplace/: README.md
(+125 files in other folders)
